fix(composer): No need for overlaid z-index: 10, appearing over menus

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -489,7 +489,7 @@ body.platform-win32 {
   height: 0;
   line-height: 1.4; // must match contenteditable container
   overflow: visible;
-  z-index: 10;
+  z-index: 1;
 }
 img.n1-overlaid-component-anchor-container {
   border: 0;
